tdf#88814 parameters are kinda-partially supported, so follow the suggestion

Change-Id: I1a39378d521f128e6b8f35a0bce781435f94e5a8